# gpt-pdf-summarizer

./: .gitignore  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml  start_services.sh
app/: main.py
app/api/: main.py  pdf_summary.py
app/services/: conversations.py  pdf_extraction.py  summary_service.py
chatgpt_conversations/: blog_conversation_1.md  conversation_1.md  conversation_2.md
