[tool.poetry]
name = "your-app-name"
version = "0.1.0"
description = "Your app description"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
fastapi = "^0.70.0"
streamlit = "^1.18.0"
openai = "^0.27.2"
uvicorn = "^0.15.0"
pypdf = "^3.5.2"
python-multipart = "^0.0.6"
streamlit-chat = "^0.0.2.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
